Added new functionality according to new requirements

--- a/CS5103_kfr899_Satyajeet.ipynb
+++ b/CS5103_kfr899_Satyajeet.ipynb
@@ -4,17 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This section contains the working code. Scroll down to enter input."
+    "# These blocks contain the working code. Scroll down to enter input."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The function that prints the frequencies of unique words in a string. DO NOT TOUCH! \n",
-    "def word_freq(text):\n",
+    "def WordFreq(string):\n",
+    "    text = remove_punc(string)\n",
+    "    \n",
     "    # Get the unique words and their frequencies in two seperate lists\n",
     "    words = text.lower().split()\n",
     "    unique_words = set(words)\n",
@@ -25,29 +27,101 @@
     "    word_frequencies.sort(reverse = True, key=lambda a: a[1])\n",
     "    \n",
     "    # Print the Word - Frequency pairs\n",
+    "    print(\"\\n\\n-----------------------Frequencies of unique words-----------------------\\n\")\n",
     "    for pair in word_frequencies:\n",
-    "        print(pair[0], ':', pair[1])"
+    "        print(pair[0], ':', pair[1])\n",
+    "\n",
+    "def remove_punc(text):\n",
+    "    # Remove puncuations\n",
+    "    puncuations = '''!()-[]{};:'\"\\,<>./?@#$%^&*_~'''\n",
+    "    for element in text: \n",
+    "        if element in puncuations: \n",
+    "            text = text.replace(element, \"\")\n",
+    "        else:\n",
+    "            continue\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def LineCount(string):\n",
+    "    lines = len(string.split('\\n'))\n",
+    "    print(\"\\n\\nTotal number of lines:  \", lines, \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CharCount(string):\n",
+    "    # Remove puncuations\n",
+    "    text = remove_punc(string)\n",
+    "    \n",
+    "    # Count characters in the string\n",
+    "    char_dump = \"\".join(text.split())\n",
+    "    char_freq = {}\n",
+    "    \n",
+    "    for c in char_dump:\n",
+    "        if c in char_freq:\n",
+    "            char_freq[c] += 1\n",
+    "        else:\n",
+    "            char_freq[c] = 1\n",
+    "    \n",
+    "    # Sort the dictionary values in descending order\n",
+    "    aux = [(char_freq[key], key) for key in char_freq]\n",
+    "    aux.sort(reverse=True)\n",
+    "    \n",
+    "    # Print the Character-Frequency pairs\n",
+    "    print(\"\\n\\n-----------------------Frequencies of Characters-----------------------\\n\")\n",
+    "    for f, c in aux:\n",
+    "        print(c, ':', f)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Enter your string (can be multi-line) in the text variable, and execute the cell using Shift+Enter keys"
+    "## Enter your string input (can be multi-line) in the _text_ variable, and execute the cell using Shift+Enter keys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "-----------------------Frequencies of unique words-----------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "-----------------------Frequencies of Characters-----------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "Total number of lines:   1 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Enter string here!!!!!\n",
-    "text = '''\n",
+    "# Enter string between the triple single-quote signs. String can be multi-line !!!!!\n",
+    "string = '''     '''\n",
     "\n",
-    "'''\n",
-    "# Lets call the function\n",
-    "word_freq(text)"
+    "# Lets call the functions\n",
+    "WordFreq(string)\n",
+    "CharCount(string)\n",
+    "LineCount(string)"
    ]
   }
  ],
