Took care of a bug

--- a/CS5103_kfr899_Satyajeet.ipynb
+++ b/CS5103_kfr899_Satyajeet.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,22 +65,7 @@
     "    \n",
     "    # Count characters in the string\n",
     "    char_dump = \"\".join(text.split())\n",
-    "    char_freq = {}\n",
-    "    \n",
-    "    for c in char_dump:\n",
-    "        if c in char_freq:\n",
-    "            char_freq[c] += 1\n",
-    "        else:\n",
-    "            char_freq[c] = 1\n",
-    "    \n",
-    "    # Sort the dictionary values in descending order\n",
-    "    aux = [(char_freq[key], key) for key in char_freq]\n",
-    "    aux.sort(reverse=True)\n",
-    "    \n",
-    "    # Print the Character-Frequency pairs\n",
-    "    print(\"\\n\\n-----------------------Frequencies of Characters-----------------------\\n\")\n",
-    "    for f, c in aux:\n",
-    "        print(c, ':', f)"
+    "    print(\"\\n\\nTotal number of chartacters: \", len(char_dump))"
    ]
   },
   {
@@ -92,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -103,20 +88,25 @@
       "\n",
       "-----------------------Frequencies of unique words-----------------------\n",
       "\n",
+      "jkl : 1\n",
+      "ghi : 1\n",
+      "abc : 1\n",
+      "def : 1\n",
       "\n",
       "\n",
-      "-----------------------Frequencies of Characters-----------------------\n",
+      "Total number of chartacters:  12\n",
       "\n",
       "\n",
-      "\n",
-      "Total number of lines:   1 \n",
+      "Total number of lines:   3 \n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Enter string between the triple single-quote signs. String can be multi-line !!!!!\n",
-    "string = '''     '''\n",
+    "string = '''abc def\n",
+    "ghi\n",
+    "jkl'''\n",
     "\n",
     "# Lets call the functions\n",
     "WordFreq(string)\n",
